--- a/templates/layout.html
+++ b/templates/layout.html
@@ -12,7 +12,8 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
         <!-- https://icons8.com/icons/set/favicon-money -->
-        <link href="/static/favicon.ico" rel="icon">
+        <link rel="icon" href="{{ url_for('static', filename='favico.ico') }}" type="image/x-icon">
+
 
         <link href="/static/styles.css" rel="stylesheet">
 
